src/toasts/toasts.scss
// Toast

.Toast {
  display: flex;
  background-color: white;
  color: $black;
  padding: $spacer-3;
  border-radius: 3px;
  border: 1px solid $black-fade-15;
  margin: $spacer-2;
  box-shadow: $box-shadow-medium;
  transition: 0.2s ease;

  @include breakpoint(sm) {
    max-width: 450px;
    width: max-content;
    margin: $spacer-3;
  }
}

.Toast-octicon {
  margin-right: $spacer-2;
}

.Toast-action {
  margin-top: $spacer-2;
}

.Toast-dismiss {
  margin-left: $spacer-3;
  color: $text-gray;

  &:hover {
    cursor: pointer;
    color: $text-gray-dark;
  }
}


// Temporarily splitting this out
// to play with static styles.
.Toast-animated {
  position: fixed;
  bottom: -100px;
  left: 0;
  animation-name: toast;
  animation-duration: 6s;
  animation-delay: 1s;
  animation-iteration-count: 1;
  animation-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
}

// Pop up animation
@keyframes toast {
  0%   {bottom:-100px;}
  10%  {bottom:0px;}
  90%  {bottom:0px;}
  100% {bottom:-100px;}
}

// 4. Block style

.Toast-block-default,
.Toast-block-error,
.Toast-block-warning,
.Toast-block-success {
  padding: 0;

  .Toast-octicon {
    color: white;
    padding: $spacer-3;
    margin-right: 0;
    fill: white;

    svg {
      width: 18px;
      height: 18px;
    }
  }

  .Toast-content {
    padding: $spacer-3;
  }

  .Toast-dismiss {
    padding: $spacer-3 $spacer-3 $spacer-3 0;
    margin: 0;
  }

  .Toast-action {
    margin: auto $spacer-3 auto $spacer-2;
  }
}

.Toast-block-default {
  .Toast-octicon {
    background-color: $blue-500;
  }
}

.Toast-block-error {

  .Toast-octicon {
    background-color: $red-500;
  }
}

.Toast-block-warning {

  .Toast-octicon {
    background-color: $yellow-600;
    fill: $gray-900;
  }
}

.Toast-block-success {

  .Toast-octicon {
    background-color: $green-500;
  }
}

